# projects

./: pyproject.toml
app/: config.py  models.py  routes.py
db/: backup_db.sh  create_db_and_user.sql
docs/: SETUP_AND_OPERATIONS.md
mf_tracker/: .env  .env.example  .gitignore  README.md  run.py
mf_tracker/app/: __init__.py
mf_tracker/backups/: fund_tracker_20260620_163659.sql  fund_tracker_20260620_164001.sql  fund_tracker_20260620_164056.sql  fund_tracker_20260620_164145.sql  fund_tracker_20260620_164254.sql
mf_tracker/db/: backup_db.sh  create_db_and_user.sql  restore_db.sh
mf_tracker/static/css/: styles.css
mf_tracker/static/js/: app.js
mf_tracker/templates/: base.html  edit_entry.html  fund_detail.html
static/css/: styles.css
templates/: dashboard.html
