[project]
name = "fund-tracker"
version = "0.1.0"
description = "Professional fund tracker with Flask, MySQL, and Excel export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0.0,<4.0.0",
  "Flask-SQLAlchemy>=3.1.1,<4.0.0",
  "PyMySQL>=1.1.1,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "openpyxl>=3.1.5,<4.0.0"
]

[tool.uv]
package = false
